syntax = "proto3";

package tateyama.proto.auth.response;

option java_multiple_files = false;
option java_package = "com.tsurugidb.auth.proto";
option java_outer_classname = "AuthResponse";

import "tateyama/proto/auth/common.proto";

// empty message
message Void {}

// unknown error was occurred.
message UnknownError {
    // the error message.
    string message = 1;
}

// retrieve auth info.
message AuthInfo {
    reserved 1 to 10;
    
    // request is successfully completed.
    message Success {
        // the authenticated user name.
        string user = 1;
        // the authenticated token string.
        string token = 2;
    }

    // authentication information is not found.
    message NotAuthenticated {}

    // the response body.
    oneof result {
        // request is successfully completed.
        Success success = 11;

        // authentication informtion is not found.
        NotAuthenticated not_authenticated = 12;

        // unknown error was occurred.
        UnknownError unknown_error = 13;
    }
}
